--- a/templates/tougcomsys/firsthome/article_form_page3.html
+++ b/templates/tougcomsys/firsthome/article_form_page3.html
@@ -55,7 +55,7 @@
       </tr>
       {% endfor %}
       <tr>
-        <td><button type="button" id="button_addplacement">Add Date</button></td>
+        <td><button type="button" id="button_addplacement">Add Placement</button></td>
         <td span="*"></td>
       </tr>
     </table>
