Fix navigation of article forms

--- a/templates/tougcomsys/firsthome/article.html
+++ b/templates/tougcomsys/firsthome/article.html
@@ -20,7 +20,7 @@
                 </div>
                 {% if article.detail_image_location == "top" %}
                     <div class="detail_image" >
-                        <img src="{{ article.detail_image.url }}"{% if article.detail_image.alt_text %} alt="{{ article.detail_image.alt_text }}"{% endif %}>
+                        <img src="{{ article.detail_image.url }}"{% if article.detail_image.alt_text %} alt="{{ article.detail_image.alt_text|addslashes }}"{% endif %}>
                     </div>
                 {% endif %}
                 <div class="content" >
@@ -28,7 +28,7 @@
                 </div>
                 {% if article.detail_image_location == "bottom" %}
                     <div class="detail_image" >
-                        <img src="{{ article.detail_image.url }}"{% if article.detail_image.alt_text %} alt="{{ article.detail_image.alt_text }}"{% endif %}>
+                        <img src="{{ article.detail_image.url }}"{% if article.detail_image.alt_text %} alt="{{ article.detail_image.alt_text|addslashes }}"{% endif %}>
                     </div>
                 {% endif %}
 
