--- a/templates/tougcomsys/firsthome/article_form_page2.html
+++ b/templates/tougcomsys/firsthome/article_form_page2.html
@@ -13,19 +13,22 @@
             {% endfor %}
 
             <div id="div_list_image">
-                {% include 'touglates/form_field.html' with field=form.list_image label_tag=formlist_image.label_tag %}
+                {% include 'touglates/form_field.html' with field=form.list_image label_tag=form.list_image.label_tag %}
             </div>
             <div id="div_list_image_location">
-                {% include 'touglates/form_field.html' with field=form.list_image_location label_tag=formlist_image_location.label_tag %}
+                {% include 'touglates/form_field.html' with field=form.list_image_location label_tag=form.list_image_location.label_tag %}
             </div>
             <div id="div_detail_image">
-                {% include 'touglates/form_field.html' with field=form.detail_image label_tag=formdetail_image.label_tag %}
+                {% include 'touglates/form_field.html' with field=form.detail_image label_tag=form.detail_image.label_tag %}
             </div>
             <div id="div_detail_image_location">
-                {% include 'touglates/form_field.html' with field=form.detail_image_location label_tag=formdetail_image_location.label_tag %}
+                {% include 'touglates/form_field.html' with field=form.detail_image_location label_tag=form.detail_image_location.label_tag %}
+            </div>
+            <div id="div_detail_image_link">
+                {% include 'touglates/form_field.html' with field=form.detail_image_link label_tag=form.detail_image_link.label_tag %}
             </div>
             <div id="div_featured_image">
-                {% include 'touglates/form_field.html' with field=form.featured_image label_tag=formfeatured_image.label_tag %}
+                {% include 'touglates/form_field.html' with field=form.featured_image label_tag=form.featured_image.label_tag %}
             </div>
             <div id="save">
                 {% with aftersave='<select name="aftersave"><option value="prev">And Go to Previous</option><option value="stay">And Stay Here</option><option value="next" selected>And Continue</option><option value="view">And View Article</option></select>' %}
