Add image_link field

--- a/templates/tougcomsys/firsthome/article_form_page2.html
+++ b/templates/tougcomsys/firsthome/article_form_page2.html
@@ -18,6 +18,10 @@
             <div id="div_list_image_location">
                 {% include 'touglates/form_field.html' with field=form.list_image_location label_tag=form.list_image_location.label_tag %}
             </div>
+            <div id="div_list_image_link">
+                {% include 'touglates/form_field.html' with field=form.list_image_link label_tag=form.list_image_link.label_tag %}
+            </div>
+
             <div id="div_detail_image">
                 {% include 'touglates/form_field.html' with field=form.detail_image label_tag=form.detail_image.label_tag %}
             </div>
