--- a/templates/tougcomsys/firsthome/article.html
+++ b/templates/tougcomsys/firsthome/article.html
@@ -21,7 +21,7 @@
                 {% if article.detail_image_location == "top" %}
                     <div class="detail_image" >
                         {% if article.detail_image_link %}
-                            <a href="{  article.detail_image_link }">
+                            <a href="{{  article.detail_image_link }}">
                                 <img src="{{ article.detail_image.url }}"{% if article.detail_image.alt_text %} alt="{{ article.detail_image.alt_text|addslashes }}"{% endif %}>
                             </a>
                         {% else %}
