--- a/templates/tougcomsys/firsthome/article_form.html
+++ b/templates/tougcomsys/firsthome/article_form.html
@@ -1,92 +1,81 @@
-{% extends './_base.html' %}
+{% extends './_base_article_form.html' %}
 {% load static %}
 
-{% block content %}
-    <script src='{% static 'touglates\touglates.js' %}'></script>
-    <div class="form">
-        {% if form.errors %}{{ form.errors }}{% endif %}
-        <form id="frm_article" method="POST">
-        {{ form.media }}
-        {% csrf_token %}
-        {% for field in form.hidden_fields %}
-        {{ field }}
-        {% endfor %}
+{% block form_fields %}
+  <div id="div_headline">
+      {% include 'touglates/form_field.html' with field=form.headline label_tag=form.headline.label_tag %}
+  </div>
+  <div id="div_subheadline">
+      {% include 'touglates/form_field.html' with field=form.subheadline label_tag=formsubheadline.label_tag %}
+  </div>
+  <div id="div_content_format">
+      {% include 'touglates/form_field.html' with field=form.content_format label_tag=formcontent_format.label_tag %}
+  </div>
+  <div id="div_content">
+      {% include 'touglates/form_field.html' with field=form.content label_tag=formcontent.label_tag %}
+  </div>
+  <div id="div_summary_format">
+      {% include 'touglates/form_field.html' with field=form.summary_format label_tag=formsummary_format.label_tag %}
+  </div>
+  <div id="div_summary">
+      {% include 'touglates/form_field.html' with field=form.summary label_tag=formsummary.label_tag %}
+  </div>
+  <div id="div_hashtags">
+      {% include 'touglates/form_field.html' with field=form.hashtags label_tag=formhashtags.label_tag %}
+  </div>
+  <div id="div_list_image">
+      {% include 'touglates/form_field.html' with field=form.list_image label_tag=formlist_image.label_tag %}
+  </div>
+  <div id="div_list_image_location">
+      {% include 'touglates/form_field.html' with field=form.list_image_location label_tag=formlist_image_location.label_tag %}
+  </div>
+  <div id="div_detail_image">
+      {% include 'touglates/form_field.html' with field=form.detail_image label_tag=formdetail_image.label_tag %}
+  </div>
+  <div id="div_detail_image_location">
+      {% include 'touglates/form_field.html' with field=form.detail_image_location label_tag=formdetail_image_location.label_tag %}
+  </div>
+  <div id="div_featured_image">
+      {% include 'touglates/form_field.html' with field=form.featured_image label_tag=formfeatured_image.label_tag %}
+  </div>
+  <div id="div_readmore">
+      {% include 'touglates/form_field.html' with field=form.readmore label_tag=formreadmore.label_tag %}
+  </div>
+  <div id="div_author">
+      {% include 'touglates/form_field.html' with field=form.author label_tag=formauthor.label_tag %}
+  </div>
+  <div id="div_descriptive_date">
+      {% include 'touglates/form_field.html' with field=form.descriptive_date label_tag=formdescriptive_date.label_tag %}
+  </div>
+  <div id="div_show_author">
+      {% include 'touglates/form_field.html' with field=form.show_author label_tag=formshow_author.label_tag %}
+  </div>
+  <div id="div_show_updated">
+      {% include 'touglates/form_field.html' with field=form.show_updated label_tag=formshow_updated.label_tag %}
+  </div>
+  <div id="div_draft_status">
+      {% include 'touglates/form_field.html' with field=form.draft_status label_tag=formdraft_status.label_tag %}
+  </div>
+  <div id="div_allow_comments">
+      {% include 'touglates/form_field.html' with field=form.allow_comments label_tag=formallow_comments.label_tag %}
+  </div>
+  <div id="div_slug">
+      {% include 'touglates/form_field.html' with field=form.slug label_tag=formslug.label_tag %}
+  </div>
 
-        <div id="div_headline">
-            {% include 'touglates/form_field.html' with field=form.headline label_tag=form.headline.label_tag %}
-        </div>
-        <div id="div_subheadline">
-            {% include 'touglates/form_field.html' with field=form.subheadline label_tag=formsubheadline.label_tag %}
-        </div>
-        <div id="div_content_format">
-            {% include 'touglates/form_field.html' with field=form.content_format label_tag=formcontent_format.label_tag %}
-        </div>
-        <div id="div_content">
-            {% include 'touglates/form_field.html' with field=form.content label_tag=formcontent.label_tag %}
-        </div>
-        <div id="div_summary_format">
-            {% include 'touglates/form_field.html' with field=form.summary_format label_tag=formsummary_format.label_tag %}
-        </div>
-        <div id="div_summary">
-            {% include 'touglates/form_field.html' with field=form.summary label_tag=formsummary.label_tag %}
-        </div>
-        <div id="div_hashtags">
-            {% include 'touglates/form_field.html' with field=form.hashtags label_tag=formhashtags.label_tag %}
-        </div>
-        <div id="div_list_image">
-            {% include 'touglates/form_field.html' with field=form.list_image label_tag=formlist_image.label_tag %}
-        </div>
-        <div id="div_list_image_location">
-            {% include 'touglates/form_field.html' with field=form.list_image_location label_tag=formlist_image_location.label_tag %}
-        </div>
-        <div id="div_detail_image">
-            {% include 'touglates/form_field.html' with field=form.detail_image label_tag=formdetail_image.label_tag %}
-        </div>
-        <div id="div_detail_image_location">
-            {% include 'touglates/form_field.html' with field=form.detail_image_location label_tag=formdetail_image_location.label_tag %}
-        </div>
-        <div id="div_featured_image">
-            {% include 'touglates/form_field.html' with field=form.featured_image label_tag=formfeatured_image.label_tag %}
-        </div>
-        <div id="div_readmore">
-            {% include 'touglates/form_field.html' with field=form.readmore label_tag=formreadmore.label_tag %}
-        </div>
-        <div id="div_author">
-            {% include 'touglates/form_field.html' with field=form.author label_tag=formauthor.label_tag %}
-        </div>
-        <div id="div_descriptive_date">
-            {% include 'touglates/form_field.html' with field=form.descriptive_date label_tag=formdescriptive_date.label_tag %}
-        </div>
-        <div id="div_show_author">
-            {% include 'touglates/form_field.html' with field=form.show_author label_tag=formshow_author.label_tag %}
-        </div>
-        <div id="div_show_updated">
-            {% include 'touglates/form_field.html' with field=form.show_updated label_tag=formshow_updated.label_tag %}
-        </div>
-        <div id="div_draft_status">
-            {% include 'touglates/form_field.html' with field=form.draft_status label_tag=formdraft_status.label_tag %}
-        </div>
-        <div id="div_allow_comments">
-            {% include 'touglates/form_field.html' with field=form.allow_comments label_tag=formallow_comments.label_tag %}
-        </div>
-        <div id="div_slug">
-            {% include 'touglates/form_field.html' with field=form.slug label_tag=formslug.label_tag %}
-        </div>
-
-        {% include 'touglates/form_field.html' with label="Submit Form" field='<button type="submit">Save and Continue</button>' %}
-    </form>
-    </div>
-    <script>
-        addRelatedPopupButton( 'id_list_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
-        addRelatedPopupButton( 'id_detail_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
-        addRelatedPopupButton( 'id_featured_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
-        function getControlIdsForPopups(modelName) {
-            controlIds={
-                'Image': ['id_list_image', 'id_detail_image', 'id_featured_image'],
-            }
-        return controlIds[modelName]
+  {% include 'touglates/form_field.html' with label="Submit Form" field='<button type="submit">Save and Continue</button>' %}
+{% endblock %}
+{% block afterform %}
+  <script>
+    addRelatedPopupButton( 'id_list_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
+    addRelatedPopupButton( 'id_detail_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
+    addRelatedPopupButton( 'id_featured_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
+    function getControlIdsForPopups(modelName) {
+        controlIds={
+            'Image': ['id_list_image', 'id_detail_image', 'id_featured_image'],
+        }
+      return controlIds[modelName]
     }
   </script>
 
-    </script>
 {% endblock %}
