--- a/templates/tougcomsys/firsthome/article_form_page4.html
+++ b/templates/tougcomsys/firsthome/article_form_page4.html
@@ -58,9 +58,7 @@
       </tr>
     </table>
     <div id="save">
-      {% with aftersave='<select name="aftersave"><option value="prev">And Go to Previous</option><option value="stay">And Stay Here</option><option selected value="view">And View Article</option></select>' %}
-          {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save</button>' field_2=aftersave %}
-      {% endwith %}
+      {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save</button>' field_2=aftersave|safe %}
     </div>
 
   </form>
