fix formatting of article_form pages

--- a/templates/tougcomsys/firsthome/_base_article_form.html
+++ b/templates/tougcomsys/firsthome/_base_article_form.html
@@ -17,5 +17,5 @@
     </form>
   </div>
   {% block afterform %}{% endblock %}
-
+  <div><a href="{% url 'tougcomsys:article' pk=object.pk %}" target="preview_{{object.pk}}">Preview</a></div>
 {% endblock %}
