--- a/templates/tougcomsys/firsthome/article_form_page3.html
+++ b/templates/tougcomsys/firsthome/article_form_page3.html
@@ -1,73 +1,63 @@
-{% extends './_base.html' %}
+{% extends './_base_article_form.html' %}
 {% load static %}
 
-{% block content %}
-<script src='{% static ' touglates\touglates.js' %}'></script>
-<div class="form">
-  {% if form.errors %}{{ form.errors }}{% endif %}
-  <form id="frm_article" method="POST">
-    {{ form.media }}
-    {% csrf_token %}
-    {% for field in form.hidden_fields %}
-    {{ field }}
-    {% endfor %}
+{% block form_fields %}
+  <div id="div_show_author">
+    {% include 'touglates/form_field.html' with field=form.descriptive_date label_tag=form.discriptive_date.label_tag %}
+  </div>
+  {{ placements.management_form }}
+  {% if placementform.errors %}{{ placementform.errors }}{% endif %}
 
-    <div id="div_show_author">
-      {% include 'touglates/form_field.html' with field=form.descriptive_date label_tag=form.discriptive_date.label_tag %}
-    </div>
-    >>{{ placements.management_form }}
+  {% for placementform in placements.forms %}
     {% if placementform.errors %}{{ placementform.errors }}{% endif %}
 
-    {% for placementform in placements.forms %}
-      {% if placementform.errors %}{{ placementform.errors }}{% endif %}
-
-      {% if placementform.id.value > 0 %}
-        <div id="div_placementform_{{ placementform.id.value }}" class="placementformsetform">
-          {% for hiddenfield in placementform.hidden_fields %}
-          {{ hiddenfield }}
-          {% endfor %}
-          {% include 'touglates/form_field.html' with field=placementform.placement %}
-          {% include 'touglates/form_field.html' with field=placementform.expiration_date %}
-          {% include 'touglates/form_field.html' with field=placementform.sortable_date %}
-          {% include 'touglates/form_field.html' with field=placementform.sticky %}
-          {% include 'touglates/form_field.html' with field=placementform.DELETE %}
-        </div>
-      {% else %}
-        <div class="placementformsetform placementnewform" style="display:none">
-          {% for hiddenfield in placementform.hidden_fields %}
-          {{ hiddenfield }}
-          {% endfor %}
-          {% include 'touglates/form_field.html' with field=placementform.placement %}
-          {% include 'touglates/form_field.html' with field=placementform.expiration_date %}
-          {% include 'touglates/form_field.html' with field=placementform.sortable_date %}
-          {% include 'touglates/form_field.html' with field=placementform.sticky %}
-          {% include 'touglates/form_field.html' with field=placementform.DELETE %}
-        </div>
-      {% endif %}
+    {% if placementform.id.value > 0 %}
+      <div id="div_placementform_{{ placementform.id.value }}" class="placementformsetform">
+        {% for hiddenfield in placementform.hidden_fields %}
+        {{ hiddenfield }}
+        {% endfor %}
+        {% include 'touglates/form_field.html' with field=placementform.placement %}
+        {% include 'touglates/form_field.html' with field=placementform.expiration_date %}
+        {% include 'touglates/form_field.html' with field=placementform.sortable_date %}
+        {% include 'touglates/form_field.html' with field=placementform.sticky %}
+        {% include 'touglates/form_field.html' with field=placementform.DELETE %}
+      </div>
+    {% else %}
+      <div class="placementformsetform placementnewform" style="display:none">
+        {% for hiddenfield in placementform.hidden_fields %}
+        {{ hiddenfield }}
+        {% endfor %}
+        {% include 'touglates/form_field.html' with field=placementform.placement %}
+        {% include 'touglates/form_field.html' with field=placementform.expiration_date %}
+        {% include 'touglates/form_field.html' with field=placementform.sortable_date %}
+        {% include 'touglates/form_field.html' with field=placementform.sticky %}
+        {% include 'touglates/form_field.html' with field=placementform.DELETE %}
+      </div>
+    {% endif %}
+  {% endfor %}
+  <table>
+    {% for placement in object.placement_set.all %}
+    <tr id="tr_placement_{{ placement.id }}">
+      <td>
+        <button type="button" id="button_editplacement_{{ placement.id }}"
+          data-formid="div_placementform_{{ placement.id }}"
+          data-displayid="tr_placement_{{ placement.id }}"
+          class="placement_edit_button">edit</button></td>
+      <td>{{ placement.when }}</td>
+      <td>{{ placement.text }}</td>
+      <td>{{ placement.is_major_current }}</td>
+    </tr>
     {% endfor %}
-    <table>
-      {% for placement in object.placement_set.all %}
-      <tr id="tr_placement_{{ placement.id }}">
-        <td>
-          <button type="button" id="button_editplacement_{{ placement.id }}"
-            data-formid="div_placementform_{{ placement.id }}"
-            data-displayid="tr_placement_{{ placement.id }}"
-            class="placement_edit_button">edit</button></td>
-        <td>{{ placement.when }}</td>
-        <td>{{ placement.text }}</td>
-        <td>{{ placement.is_major_current }}</td>
-      </tr>
-      {% endfor %}
-      <tr>
-        <td><button type="button" id="button_addplacement">Add Placement</button></td>
-        <td span="*"></td>
-      </tr>
-    </table>
-    <div id="save">
-      {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save</button>' field_2=aftersave|safe %}
-    </div>
-
-  </form>
+    <tr>
+      <td><button type="button" id="button_addplacement">Add Placement</button></td>
+      <td span="*"></td>
+    </tr>
+  </table>
+  <div id="save">
+    {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save</button>' field_2=aftersave|safe %}
+  </div>
+{% endblock %}
+{% block after_form %}
   <script>
     let placementEditButtons = document.getElementsByClassName('placement_edit_button')
     for (placementEditButton of placementEditButtons) {
@@ -81,8 +71,5 @@
       showNewFormsetForm('placementnewform')
     })
   </script>
-  <script>
-  </script>
 
-</div>
 {% endblock %}
