--- a/templates/tougcomsys/firsthome/article_form_page5.html
+++ b/templates/tougcomsys/firsthome/article_form_page5.html
@@ -1,25 +1,15 @@
-{% extends './_base.html' %}
+{% extends './_base_article_form.html' %}
 {% load static %}
 
-{% block content %}
-    <script src='{% static 'touglates\touglates.js' %}'></script>
-    <div class="form">
-        {% if form.errors %}{{ form.errors }}{% endif %}
-        <form id="frm_article" method="POST">
-            {{ form.media }}
-            {% csrf_token %}
-            {% for field in form.hidden_fields %}
-            {{ field }}
-            {% endfor %}
+{% block form_fields %}
 
-            <div id="div_draft_status">
-                {% include 'touglates/form_field.html' with field=form.draft_status label_tag=form.draft_status.label_tag %}
-            </div>
-            <div id="save">
-              {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save</button>' field_2=aftersave|safe %}
-          </div>
-
-      </form>
+  <div id="div_draft_status">
+      {% include 'touglates/form_field.html' with field=form.draft_status label_tag=form.draft_status.label_tag %}
+  </div>
+  <div id="save">
+    {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit">Save</button>' field_2=aftersave|safe %}
   </div>
 
+{% endblock %}
+{% block after_form %}
 {% endblock %}
