Fix error in preview link

--- a/templates/tougcomsys/firsthome/_base_article_form.html
+++ b/templates/tougcomsys/firsthome/_base_article_form.html
@@ -21,5 +21,7 @@
     </form>
   </div>
   {% block afterform %}{% endblock %}
-  <div><a href="{% url 'tougcomsys:article' pk=object.pk %}" target="preview_{{object.pk}}">Preview</a></div>
+  {% if object %}
+    <div><a href="{% url 'tougcomsys:article' pk=object.pk %}" target="preview_{{object.pk}}">Preview</a></div>
+  {% endif %}
 {% endblock %}
