--- a/templates/tougcomsys/firsthome/article_form_page3.html
+++ b/templates/tougcomsys/firsthome/article_form_page3.html
@@ -54,7 +54,7 @@
     </tr>
   </table>
 {% endblock %}
-{% block after_form %}
+{% block afterform %}
   <script>
     let placementEditButtons = document.getElementsByClassName('placement_edit_button')
     for (placementEditButton of placementEditButtons) {
@@ -68,5 +68,4 @@
       showNewFormsetForm('placementnewform')
     })
   </script>
-
 {% endblock %}
