--- a/templates/tougcomsys/firsthome/article_form_page4.html
+++ b/templates/tougcomsys/firsthome/article_form_page4.html
@@ -49,7 +49,7 @@
       </tr>
     </table>
   {% endblock %}
-  {% block after_form %}
+  {% block afterform %}
   <script>
     let articleeventdateEditButtons = document.getElementsByClassName('articleeventdate_edit_button')
     for (articleeventdateEditButton of articleeventdateEditButtons) {
